# caroline

./: .gitignore  Cargo.toml  README.md  build.rs
.circleci/: config.yml
definitions/: CloudFormationResourceSpecification.json
src/: aws.rs  lib.rs
tests/: test_basic.rs
