[package]
name = "caroline"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"


[build-dependencies]
proffer = { version = "1.0.0-rc1", path = "./../proffer" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
