[package]
name = "caroline"
version = "0.1.0-alpha1"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
derive_builder = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }


[build-dependencies]
proffer = { git = "https://github.com/milesgranger/proffer", branch = "master" }
serde_json = "1.0"
derive_builder = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
